Attempt to solve mysql db/spring boot connection error